# YC-Hackathon-2025

./: .gitignore  chat_with_claude.py  readme.md  test_claude.py
backend/: .env  .gitignore  demo_enhanced_flight_search.py  pyproject.toml  test.py  test_amadeus.py  test_calendar.py  test_fallback.py  test_perplexity_api.py  test_searchapi.py
backend/budgeteer_mcp_agent/: .env.example  README.md  __init__.py  __main__.py  fast_server.py  fixtures.py  mcp_metadata.json  models.py  package-lock.json  requirements.txt
backend/budgeteer_mcp_agent/cleanup_backup/: pre_cleanup_20250823_171417.tgz
backend/docs/: BUDGETEER_AGENT_README.md  FLIGHT_AGENT_README.md  HOTEL_AGENT_README.md  README.md
backend/flight_mcp_agent/: __main__.py  amadeus_client.py  chat_wrapper.py  fast_server.py  fixtures.py  mcp_metadata.json  models.py  requirements.txt  searchapi_client.py  server.py  setup.py  test_server.py
backend/hotel_mcp_agent/: .env.example  __main__.py  chat_wrapper.py  check_mode.py  debug_api.py  debug_response.py  demo_chat.py  fast_server.py  fixtures.py  location_enricher.py  mcp_metadata.json  models.py  pyproject.toml  quick_test.py  quick_test_chat.py  requirements.txt  searchapi_client.py  setup.py  standalone_test.py  test_chat_input.py  test_chat_integration.py  test_chat_wrapper.py  test_demo_chat.py  test_direct.py  test_fast_server.py  test_location_enrichment.py  test_mcp_tools.py  test_searchapi_direct.py
backend/scripts/: validate_fixtures.py
backend/services/agents/: README.md  SCHEMA_REFINEMENTS.md  schemas.py  schemas_refined.py  simple_test.py  (+1 more)
(+21 files in other folders)
